--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons</title>
+    <title>Lesson 3</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -13,6 +13,17 @@
     </header>
 
     <main>
+        <section>
+            <ul>
+                <li>Git clone</li>
+                <li>Git add</li>
+                <li>Git status</li>
+                <li>Git commit</li>
+                <li>Git clean</li>
+                <li>Git push</li>
+                <li>Git pull</li>
+            </ul>
+        </section>
 
     </main>
 
