--- a/index4.html
+++ b/index4.html
@@ -173,32 +173,32 @@
                 <legend>Состояние:</legend>
                 <p>
                     <label>
-                        <input type="radio" name="accident" value="male">
+                        <input type="checkbox" name="accident" value="male">
                         Был в ДТП
                     </label>
                 </p> <p>
                     <label>
-                        <input type="radio" name="order" value="male">
+                        <input type="checkbox" name="order" value="male">
                         Автомобиль под заказ
                     </label>
                 </p> <p>
                     <label>
-                        <input type="radio" name="loan" value="male">
+                        <input type="checkbox" name="loan" value="male">
                         Автомобиль в кредите
                     </label>
                 </p> <p>
                     <label>
-                        <input type="radio" name="confiscate" value="male">
+                        <input type="checkbox" name="confiscate" value="male">
                         Аввтомобиль конфискован
                     </label>
                 </p> <p>
                     <label>
-                        <input type="radio" name="hintUSA" value="male">
+                        <input type="checkbox" name="hintUSA" value="male">
                         Пригнан из США
                     </label>
                 </p> <p>
                     <label>
-                        <input type="radio" name="hintEU" value="male">
+                        <input type="checkbox" name="hintEU" value="male">
                         Пригнан из Европы
                     </label>
                 </p>
