--- a/index4.html
+++ b/index4.html
@@ -115,7 +115,7 @@
                 <p>
                     <span>Комфорт:</span><br>
                     <label>
-                        <select id="selectedComfortList" name="comfortlist">
+                        <select multiple="multiple" id="selectedComfortList" name="comfortlist[]">
                         <option value="none" selected disabled>Не выбрано</option>
                         <option value="onBoardComp">Бортовой компьютер</option>
                         <option value="HeatedMirrors">Подогрев зеркал</option>
