--- a/index.html
+++ b/index.html
@@ -1,26 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons</title>
-    <link rel="stylesheet" href="./css/style.css">
+<title>Calendar For 2022</title>
+<style type="text/css">
+    body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        margin-top: 150px;
+    }
+    .calendar-wrp {
+        display: table;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        width: 500px;
+    }
+    .calendar-item {
+        display: table-cell;
+        justify-content: center;
+        width: 200px;
+        display: inline-block;
+        vertical-align: top;
+        margin: 0 16px 20px;
+        font: 14px/1.2 Arial, sans-serif;
+    }
+    .calendar-head {
+        text-align: center;
+        padding: 5px;
+        font-weight: 700;
+        font-size: 14px;
+    }
+    .calendar-item table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+    .calendar-item th {
+        font-size: 12px;
+        padding: 6px 4px;
+        text-align: center;
+        color: #888;
+        font-weight: normal;
+    }
+    .calendar-item td {
+        font-size: 13px;
+        padding: 6px 5px;
+        text-align: center;
+        border: 1px solid #ddd;
+    }
+    .calendar-item tr th:nth-child(6), .calendar-item tr th:nth-child(7),
+    .calendar-item tr td:nth-child(6), .calendar-item tr td:nth-child(7) {
+        color: #e65a5a;
+    }
+    .calendar-day.last {
+        color:#999 !important;
+    }
+    .calendar-day.today {
+        font-weight: bold;
+    }
+    .calendar-day.event {
+        background: #fdeccd;
+        position: relative;
+        cursor: pointer;
+    }
+    .calendar-day.event:hover .calendar-popup {
+        display: block;
+    }
+    .calendar-popup {
+        display: none;
+        position: absolute;
+        top: 40px;
+        left: 0;
+        min-width: 200px;
+        padding: 15px;
+        background: #fff;
+        text-align: left;
+        font-size: 13px;
+        z-index: 100;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        color: #000;
+    }
+    .calendar-popup:before {
+        content: "";
+        border: solid transparent;
+        position: absolute;
+        left: 8px;
+        bottom: 100%;
+        border-bottom-color: #fff;
+        border-width: 9px;
+        margin-left: 0;
+    }
+</style>
 </head>
 <body>
-    <header>
-
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-        
-    </footer>
-
-
-    <script src="./js/script.js"></script>
+    <div class="calendar-wrp">
+        <div class="calendar-item">
+            <div class="calendar-head">January 2022</div>
+            <table>
+                <tr>
+                    <th>Mon</th>
+                    <th>Tue</th>
+                    <th>Wed</th>
+                    <th>Thu</th>
+                    <th>Fri</th>
+                    <th>Sat</th>
+                    <th>Sun</th>
+                </tr>
+                <tr><td></td><td></td><td></td><td></td><td></td><td class="calendsr-day last">1</td><td class="calendar-day last">2</td></tr><tr><td class="calendar-day last">3</td><td class="calendar-day last">4</td><td class="calendar-day last">5</td><td class="calendar-day last">6</td><td class="calendar-day last">7</td><td class="calendar-day last">8</td><td class="calendar-day last">9</td></tr><tr><td class="calendar-day last">10</td><td class="calendar-day last">11</td><td class="calendar-day last">12</td><td class="calendar-day last">13</td><td class="calendar-day last">14</td><td class="calendsr-day last">15</td><td class="calendar-day last event">16<div class="calendar-popup">Pay utility bills</div></td></tr><tr><td class="calendar-day last">17</td><td class="calendar-day last">18</td><td class="calendar-day last">19</td><td class="calendar-day last">20</td><td class="calendar-day last">21</td><td class="calendar-day last">22</td><td class="calendar-day last">23</td></tr><tr><td class="calendar-day last">24</td><td class="calendar-day last">25</td><td class="calendar-day last">26</td><td class="calendar-day last">27</td><td class="calendar-day last">28</td><td class="calendar-day last">29</td><td class="calendar-day last">30</td></tr><tr><td class="calendar-day last">31</td></tr>
+            </table>
+        </div>
+        <div class="calendar-item">
+            <div class="calendar-head">February 2022</div>
+             <table>
+             <tr>
+             <th>Mon</th>
+             <th>Tue</th>
+             <th>Wed</th>
+             <th>Thu</th>
+             <th>Fri</th>
+             <th>Sat</th>
+             <th>Sun</th>
+             </tr> <tr><td></td><td class="calendar-day last">1</td><td class="calendar-day last">2</td><td class="calendar-day last">3</td><td class="calendar-day last">4</td><td class="calendar-day last">5</td><td class="calendar-day last">6</td></tr><tr><td class="calendar-day last">7</td><td class="calendar-day last">8</td><td class="calendar-day last">9</td><td class="calendar-day last">10</td><td class="calendar-day last">11</td><td class="calendar-day last">12</td><td class="calendar-day last">13</td></tr><tr><td class="calendar-day last">14</td><td class="calendar-day last">15</td><td class="calendar-day last event">16<div class="calendar-popup">Pay utility bills</div></td><td class="calendar-day last">17</td><td class="calendar-day last">18</td><td class="calendar-day last">19</td><td class="calendar-day last">20</td></tr><tr><td class="calendar-day last">21</td><td class="calendar-day last">22</td><td class="calendar-day last">23</td><td class="calendar-day last">24</td><td class="calendar-day last">25</td><td class="calendar-day last">26</td><td class="calendar-day last">27</td></tr><tr><td class="calendar-day last">28</td></tr>
+             </table>
+        </div>
+          <div class="calendar-item">
+          <div class="calendar-head">March 2022</div>
+          <table>
+              <tr>
+                  <th>Mon</th>
+                  <th>Tue</th>
+                  <th>Wed</th>
+                  <th>Thu</th>
+                  <th>Fri</th>
+                  <th>Sat</th>
+                  <th>Sun</th>
+              </tr> <tr><td></td><td class="calendar-day last">1</td><td class="calendar-day last">2</td><td class="calendar-day last">3</td><td class="calendar-day last">4</td><td class="calendar-day last">5</td><td class="calendar-day last">6</td></tr><tr><td class="calendar-day last">7</td><td class="calendar-day last event">8<div class="calendar-popup">International Women`s Day</div></td><td class="calendar-day last">9</td><td class="calendar-day last">10</td><td class="calendar-day last">11</td><td class="calendar-day last">12</td><td class="calendar-day last">13</td></tr><tr><td class="calendar-day last">14</td><td class="calendar-day last">15</td><td class="calendar-day last event">16<div class="calendar-popup">Pay utility bills</div></td><td class="calendar-day last">17</td><td class="calendar-day last">18</td><td class="calendar-day last">19</td><td class="calendar-day last">20</td></tr><tr><td class="calendar-day last">21</td><td class="calendar-day last">22</td><td class="calendar-day last">23</td><td class="calendar-day last">24</td><td class="calendar-day last">25</td><td class="calendar-day last">26</td><td class="calendar-day last">27</td></tr><tr><td class="calendar-day last">28</td><td class="calendar-day last">29</td><td class="calendar-day last">30</td><td class="calendar-day last">31</td></tr>
+          </table>
+      </div>  
+      <div class="calendar-item">
+          <div class="calendar-head">April 2022</div>
+          <table>
+              <tr>
+                  <th>Mon</th>
+                  <th>Tue</th>
+                  <th>Wed</th>
+                  <th>Thu</th>
+                  <th>Fri</th>
+                  <th>Sat</th>
+                  <th>Sun</th>
+              </tr> <tr><td></td><td></td><td></td><td></td><td class="calendar-day last">1</td><td class="calendar-day last">2</td><td class="calendar-day last">3</td></tr><tr><td class="calendar-day last">4</td><td class="calendar-day last">5</td><td class="calendar-day last">6</td><td class="calendar-day last">7</td><td class="calendar-day last">8</td><td class="calendar-day last">9</td><td class="calendar-day last">10</td></tr><tr><td class="calendar-day last">11</td><td class="calendar-day last">12</td><td class="calendar-day last">13</td><td class="calendar-day last">14</td><td class="calendar-day last">15</td><td class="calendar-day last event">16<div class="calendar-popup">Pay utility bills</div></td><td class="calendar-day last">17</td></tr><tr><td class="calendar-day last">18</td><td class="calendar-day last">19</td><td class="calendar-day last">20</td><td class="calendar-day last">21</td><td class="calendar-day last">22</td><td class="calendar-day last">23</td><td class="calendar-day last">24</td></tr><tr><td class="calendar-day last">25</td><td class="calendar-day last">26</td><td class="calendar-day last">27</td><td class="calendar-day last">28</td><td class="calendar-day last">29</td><td class="calendar-day last">30</td></tr>
+          </table>
+      </div>
+    </div>
 </body>
 </html>
