--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
         color: #000;
     }
     .calendar-popup:before {
-        content: "";
         border: solid transparent;
         position: absolute;
         left: 8px;
@@ -107,7 +106,8 @@
                     <th>Sat</th>
                     <th>Sun</th>
                 </tr>
-                <tr><td></td><td></td><td></td><td></td><td></td><td class="calendsr-day last">1</td><td class="calendar-day last">2</td></tr><tr><td class="calendar-day last">3</td><td class="calendar-day last">4</td><td class="calendar-day last">5</td><td class="calendar-day last">6</td><td class="calendar-day last">7</td><td class="calendar-day last">8</td><td class="calendar-day last">9</td></tr><tr><td class="calendar-day last">10</td><td class="calendar-day last">11</td><td class="calendar-day last">12</td><td class="calendar-day last">13</td><td class="calendar-day last">14</td><td class="calendsr-day last">15</td><td class="calendar-day last event">16<div class="calendar-popup">Pay utility bills</div></td></tr><tr><td class="calendar-day last">17</td><td class="calendar-day last">18</td><td class="calendar-day last">19</td><td class="calendar-day last">20</td><td class="calendar-day last">21</td><td class="calendar-day last">22</td><td class="calendar-day last">23</td></tr><tr><td class="calendar-day last">24</td><td class="calendar-day last">25</td><td class="calendar-day last">26</td><td class="calendar-day last">27</td><td class="calendar-day last">28</td><td class="calendar-day last">29</td><td class="calendar-day last">30</td></tr><tr><td class="calendar-day last">31</td></tr>
+                <tr>
+                    <td></td><td></td><td></td><td></td><td></td><td class="calendsr-day last">1</td><td class="calendar-day last">2</td></tr><tr><td class="calendar-day last">3</td><td class="calendar-day last">4</td><td class="calendar-day last">5</td><td class="calendar-day last">6</td><td class="calendar-day last">7</td><td class="calendar-day last">8</td><td class="calendar-day last">9</td></tr><tr><td class="calendar-day last">10</td><td class="calendar-day last">11</td><td class="calendar-day last">12</td><td class="calendar-day last">13</td><td class="calendar-day last">14</td><td class="calendsr-day last">15</td><td class="calendar-day last event">16<div class="calendar-popup">Pay utility bills</div></td></tr><tr><td class="calendar-day last">17</td><td class="calendar-day last">18</td><td class="calendar-day last">19</td><td class="calendar-day last">20</td><td class="calendar-day last">21</td><td class="calendar-day last">22</td><td class="calendar-day last">23</td></tr><tr><td class="calendar-day last">24</td><td class="calendar-day last">25</td><td class="calendar-day last">26</td><td class="calendar-day last">27</td><td class="calendar-day last">28</td><td class="calendar-day last">29</td><td class="calendar-day last">30</td></tr><tr><td class="calendar-day last">31</td></tr>
             </table>
         </div>
         <div class="calendar-item">
