--- a/index.html
+++ b/index.html
@@ -2,25 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons</title>
+    <title>Cards</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/fonts.css/font.css">
 </head>
 <body>
-    <header>
-
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-        
-    </footer>
-
-
-    <script src="./js/script.js"></script>
+    <div class="container">
+        <div class="card">
+            <img class="displayed" src="../lesson7/images/13652.jpg" alt="bmw" width="250">
+            <h2>BMW i8 Series</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            </p>
+        </div>
+        <div class="card">
+            <img class="displayed" src="../lesson7/images/338364.webp" alt="bmw5" width="250">
+            <h2>BMW M3 Sport</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            </p>
+        </div>
+        <div class="card">
+            <img class="displayed" src="../lesson7/images/56212ed20de5e8a4f0c829b7dea1b014.jpg" alt="bmw1" width="250">
+            <h2>BMW M4 Series</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            </p>
+        </div>
+        <div class="card">
+            <img class="displayed" src="../lesson7/images/824967.jpg" alt="BmW" width="250">
+            <h2>BMW M3 Performance</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            </p>
+        </div>
+        <div class="card">
+            <img class="displayed" src="../lesson7/images/autumn-bmw-bmw-car-bmw-4-series-hd-wallpaper-preview.jpg" alt="bMw" width="250">
+            <h2>BMW M4 F82 Tuning</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            </p>
+        </div>
+        <div class="card">
+            <img class="displayed" src="../lesson7/images/photo-1555215695-3004980ad54e.jpeg" alt="BMw" width="250">
+            <h2>BMW M4 Alpine</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            </p>
+        </div>
+    </div>
+    
 </body>
 </html>
