--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 <body>
     <div class="container">
         <div class="card">
-            <img class="displayed" src="../lesson7/images/13652.jpg" alt="bmw" width="250">
+            <img class="displayed" src="./images/13652.jpg" alt="bmw" width="250">
             <h2>BMW i8 Series</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
             </p>
         </div>
         <div class="card">
-            <img class="displayed" src="../lesson7/images/338364.webp" alt="bmw5" width="250">
+            <img class="displayed" src="./images/338364.webp" alt="bmw5" width="250">
             <h2>BMW M3 Sport</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
             </p>
         </div>
         <div class="card">
-            <img class="displayed" src="../lesson7/images/56212ed20de5e8a4f0c829b7dea1b014.jpg" alt="bmw1" width="250">
+            <img class="displayed" src="./images/56212ed20de5e8a4f0c829b7dea1b014.jpg" alt="bmw1" width="250">
             <h2>BMW M4 Series</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
             </p>
         </div>
         <div class="card">
-            <img class="displayed" src="../lesson7/images/824967.jpg" alt="BmW" width="250">
+            <img class="displayed" src="./images/824967.jpg" alt="BmW" width="250">
             <h2>BMW M3 Performance</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
             </p>
         </div>
         <div class="card">
-            <img class="displayed" src="../lesson7/images/autumn-bmw-bmw-car-bmw-4-series-hd-wallpaper-preview.jpg" alt="bMw" width="250">
+            <img class="displayed" src="./images/autumn-bmw-bmw-car-bmw-4-series-hd-wallpaper-preview.jpg" alt="bMw" width="250">
             <h2>BMW M4 F82 Tuning</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
             </p>
         </div>
         <div class="card">
-            <img class="displayed" src="../lesson7/images/photo-1555215695-3004980ad54e.jpeg" alt="BMw" width="250">
+            <img class="displayed" src="./images/photo-1555215695-3004980ad54e.jpeg" alt="BMw" width="250">
             <h2>BMW M4 Alpine</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
             </p>
