--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="card">
             <img class="displayed" src="./images/13652.jpg" alt="bmw" width="250">
             <h2>BMW i8 Series</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            <p>The BMW i8 is a plug-in hybrid sports car developed by BMW. The i8 was part of BMW's electrified fleet and was marketed under the BMW i sub-brand.
             </p>
         </div>
         <div class="card">
