--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="card">
             <img class="displayed" src="./images/338364.webp" alt="bmw5" width="250">
             <h2>BMW M3 Sport</h2>
-            <p>The BMW M3 is a high-performance version of the BMW 3 Series, developed by BMW's in-house motorsport division, BMW M GmbH. M3 models have been produced for every generation of 3 Series since the E30 M3 was introduced in 1986.
+            <p>The BMW M3 is a high-performance version of the BMW 3 Series, developed by BMW's in-house motorsport division, BMW M GmbH.
             </p>
         </div>
         <div class="card">
