add text to the 3d card

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="card">
             <img class="displayed" src="./images/56212ed20de5e8a4f0c829b7dea1b014.jpg" alt="bmw1" width="250">
             <h2>BMW M4 Series</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            <p>The BMW M4 is a high-performance version of the BMW 4 Series coupes and convertibles developed by BMW's motorsport division.
             </p>
         </div>
         <div class="card">
