edition in text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="card">
             <img class="displayed" src="./images/824967.jpg" alt="BmW" width="250">
             <h2>BMW M3 Performance</h2>
-            <p>The BMW M3 is a high-performance version of the BMW 3-Series, developed by BMW's in-house motorsport division, BMW M. M3 models have been derived from the E30, E36, E46, E90/E92/E93, and F80 3-series.
+            <p>The BMW M3 is a high-performance version of the BMW 3-Series, developed by BMW's in-house motorsport division, BMW M. M3 models have been derived from the E30 to F80 3-series.
             </p>
         </div>
         <div class="card">
