--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card">
             <img class="displayed" src="./images/autumn-bmw-bmw-car-bmw-4-series-hd-wallpaper-preview.jpg" alt="bMw" width="250">
             <h2>BMW M4 F82 Tuning</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            <p>Suspension, exhaust system, brakes and weight reduction measures including increased use of carbon fibre, such as on the roof of the car.
             </p>
         </div>
         <div class="card">
