--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="card">
             <img class="displayed" src="./images/autumn-bmw-bmw-car-bmw-4-series-hd-wallpaper-preview.jpg" alt="bMw" width="250">
             <h2>BMW M4 F82 Tuning</h2>
-            <p>Suspension, exhaust system, brakes and weight reduction measures including increased use of carbon fibre, such as on the roof of the car.
+            <p>Include an upgraded engine, suspension, exhaust system, brakes and weight reduction measures including increased use of carbon fibre, such as on the roof of the car.
             </p>
         </div>
         <div class="card">
