--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="card">
             <img class="displayed" src="./images/photo-1555215695-3004980ad54e.jpeg" alt="BMw" width="250">
             <h2>BMW M4 Alpine</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates ducimus perspiciatis voluptatibus in quibusdam odit rerum nam debitis saepe voluptate.
+            <p>These includes a wing, carbon fibre side skirts, an M Performance Exhaust system, canards, a carbon fibre splitter, a carbon fibre diffuser and rear ground effects.
             </p>
         </div>
     </div>
