--- a/index.html
+++ b/index.html
@@ -6,21 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/fonts/">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <a href="#" class="nav-link">ГЛАВНАЯ</a>
+                <a href="#" class="nav-link">ОБ АВТОРЕ</a>
+                <a href="#" class="nav-link">РАБОТЫ</a>
+                <a href="#" class="nav-link">ПРОЦЕСС</a>
+                <a href="#" class="nav-link">КОНТАКТЫ</a>
+            </nav>
+        </div>
     </header>
-
     <main>
-
+        <section class="first-screen">
+            <div class="container">
+              <h1 class="main-title">Дизайн и вёрстка</h1>
+              <p class="second-title">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+             </p>
+             <button class="main-button">НАПИСАТЬ МНЕ</button>
+            </div>
+        </section> 
+        <section class="about-block">
+            <div class="container">
+              <h2 class="about-title">Обо мне</h2>
+              <p class="about-subtitle">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+                Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+             </p>
+            </div>
+        </section> 
+        <section>
+            <nav></nav>
+            <h1>Title</h1>
+        </section>
+        <section>
+            <nav></nav>
+            <h1>Title</h1>
+        </section>
     </main>
-
     <footer>
-        
+        <p>&#169 copyright</p>
     </footer>
-
-
-    <script src="./js/script.js"></script>
 </body>
 </html>
