--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
                     Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
                 </p>
               </div>
-              <iframe class="iframe" width="1110" height="600" src="https://www.youtube.com/embed/bWPMSSsVdPk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class="iframe" width="1110" height="600" src="https://www.youtube.com/embed/bWPMSSsVdPk"
+               title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; 
+               encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> 
         </section> 
     </main>
     <footer class="footer">
         <div class="container">
             <p>Иванов Иван</p>
-           <p>&#169 copyright 2018. Все права защищены.</p>
+           <p>© copyright 2018. Все права защищены.</p>
         </div>
     </footer>
 </body>
