--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Lesson 6</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../converted-fonts/">
 </head>
 <body>
     <section>
-        <h1 class="flex">Типы селекторов:</h1>
+        <h1 class="global-header">Типы селекторов:</h1>
         <h2 class="flex title">1. По названию элемента</h2>
         <p>Селектор по элементу предназначен для выбора элементов по имени тега.
             Синтаксис: Имя тега
@@ -22,6 +23,9 @@
         <p id="paral">В CSS коде селектор id начинается с символа # сразу после которого идет имя идентификатора.
              Каждый идентификатор может встречаться на странице только один раз,
               т. е. определенный id должен быть использован на странице только с тем тегом, для которого он предназначен.
+        </p>
+        <p>
+            <img src="./images/Landscape-Color.jpg" alt="landscape">
         </p>
         <h2 class="flex title">3. По классу</h2>
         <p class="paragraph">CSS селектор class позволяет также как и селектор id стилизовать конкретный элемент страницы, но в отличие от id,
@@ -44,10 +48,13 @@
             font-weight: bold;
           }          
           </p>
-        <h2 class="flex title">5. По вложенности</h2>
-        <h2 class="flex title">6. Универсальные</h2>
-        <p> Универсальные селекторы CSS обозначаются обыкновенной звездочкой «*». 
-            Под звездочкой может подразумеваться любой элемент разметки HTML-страницы. "* {font-size: 16px;}" - задаст размер шрифта для текстовых элементов страницы.
+        <h2 class="flex title">5. Дочерние селекторы</h2>
+            <p><i>Дочерним селектором считается такой,</i>который в дереве элементов находится прямо внутри родительского элемента. Синтаксис применения таких селекторов следующий.
+          Селектор 1 > Селектор 2 {Описание правил стиля}.
+           </p> 
+        <h2 class="flex title">6. Универсальные селекторы</h2>
+        <p> Универсальные селекторы CSS обозначаются обыкновенной звездочкой «*». /* селектор * выберет все элементы на странице */. 
+            Под звездочкой может подразумеваться любой элемент разметки HTML-страницы. "* {font-size: 16px;}" - задаст размер шрифта для текстовых элементов страницы. 
         </p>
     </section>
 </body>
