--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <section>
         <h1 class="global-header">Типы селекторов:</h1>
         <h2 class="flex title">1. По названию элемента</h2>
-        <p>Селектор по элементу предназначен для выбора элементов по имени тега.
+        <p id="element">Селектор по элементу предназначен для выбора элементов по имени тега.
             Синтаксис: Имя тега
             Пример задания правила для всех элементов p на странице:
             /* селектор p выберет все элементы p на странице */
             p {
               padding-bottom: 15px;
             }</p>
-        <!-- <img src="" alt="">
-        <input id="nameId" type="text" name=""> -->
         <h2 class="flex title">2. По ID</h2>
         <p id="paral">В CSS коде селектор id начинается с символа # сразу после которого идет имя идентификатора.
              Каждый идентификатор может встречаться на странице только один раз,
@@ -31,7 +29,7 @@
         <p class="paragraph">CSS селектор class позволяет также как и селектор id стилизовать конкретный элемент страницы, но в отличие от id,
              селектор class позволяет применить свой стиль к нескольким элементам на веб-странице, а не только к одному.</p>
         <h2 class="flex title">4. По нескольким классам</h2>
-        <p>Если нескольким селекторам нужно задать одно и то же правило, то можно написать длинно:
+        <p class="someClasses">Если нескольким селекторам нужно задать одно и то же правило, то можно написать длинно:
             h1 {
             font-weight: bold;
           }
@@ -56,6 +54,31 @@
         <p> Универсальные селекторы CSS обозначаются обыкновенной звездочкой «*». /* селектор * выберет все элементы на странице */. 
             Под звездочкой может подразумеваться любой элемент разметки HTML-страницы. "* {font-size: 16px;}" - задаст размер шрифта для текстовых элементов страницы. 
         </p>
+        <h2 class="flex title">7. Селекторы атрибутов</h2>
+        <p class="p">
+            Селекторы атрибутов выбирают элементы на основе имени атрибута или значения атрибута:
+            [атрибут] — все элементы, содержащие указанный атрибут, [alt] — все элементы, для которых задан атрибут
+            alt;
+            селектор[атрибут] — элементы данного типа, содержащие указанный атрибут, img[alt] — только картинки, для
+            которых задан атрибут alt;
+            селектор[атрибут="значение"] — элементы данного типа, содержащие указанный атрибут с конкретным
+            значением, img[title="flower"] — все картинки, название которых содержит слово flower;
+            селектор[атрибут~="значение"] — элементы частично содержащие данное значение, например, если для
+            элемента задано несколько классов через пробел, p[class~="feature"] — абзацы, имя класса которых
+            содержит feature;
+            селектор[атрибут|="значение"] — элементы, список значений атрибута которых начинается с указанного
+            слова, p[class|="feature"] — абзацы, имя класса которых feature или начинается на feature;
+            селектор[атрибут^="значение"] — элементы, значение атрибута которых начинается с указанного значения,
+            a[href^="http://"] — все ссылки, начинающиеся на http://;
+        </p>
+        <p><a href="https://www.w3.org/">W3C</a></p>
+        <p> селектор[атрибут$="значение"] — элементы, значение атрибута которых заканчивается указанным значением,
+            img[src$=".png"] — все картинки в формате png;
+            селектор[атрибут*="значение"] — элементы, значение атрибута которых содержит в любом месте указанное
+            слово, a[href*="book"] — все ссылки, название которых содержит book.
+        </p>
+        <p><a href="https://https://www.apple.com/">Apple</a></p>
+        <input type="submit" value="Отправить">
     </section>
 </body>
 </html>
