add some styles and img

--- a/index.html
+++ b/index.html
@@ -6,21 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./converted-fonts/">
 </head>
 <body>
-    <header>
-
-    </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-        
-    </footer>
-
-
-    <script src="./js/script.js"></script>
+    <div class="container">
+        <img src="./images/photo-1549740425-5e9ed4d8cd34.jpeg" alt="baloons">
+    </div>
 </body>
 </html>
