--- a/index.html
+++ b/index.html
@@ -4,23 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons</title>
+    <title>Lesson 9</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-
-    </header>
-
     <main>
-
+        <div class="container">
+            <div class="block">
+                <div class="cube">
+                    <p>1</p>
+                </div>
+                <div class="cube2">
+                    <p>2</p>
+                </div>
+                  <span class="clearfix"></span>
+            </div>
+            <div class="block">
+                <div class="cube1">
+                    <p>1</p>
+                </div>
+                <div class="cube100">
+                    <p>5</p>
+                </div>
+                <div class="cube100">
+                    <p>4</p>
+                </div>
+                <div class="cube100">
+                    <p>3</p>
+                </div>
+                <div class="cube100">
+                    <p>2</p>
+                </div>
+                <span class="clearfix"></span>
+            </div>
+             <div class="block">
+                <div class="cube1">
+                    <p>1</p>
+                </div>
+                <div class="cube100">
+                    <p>5</p>
+                </div>
+                <div class="cube100">
+                    <p>4</p>
+                </div>
+                <div class="cube100">
+                    <p>3</p>
+                </div>
+                <div class="cube100">
+                    <p>2</p>
+                </div>
+                <span class="clearfix"></span>
+            </div>
+        </div>
     </main>
-
-    <footer>
-        
-    </footer>
-
-
-    <script src="./js/script.js"></script>
 </body>
 </html>
