--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <div class="сontainer">
             <div class="block">
-                <div class="cube">
+                <div class="cube1">
                     <p>1</p>
                 </div>
                 <div class="cube2">
                     <p>2</p>
                 </div>
-                  <span class="clearfix"></span>
+                <span class="clearfix"></span>
             </div>
             <div class="block">
                 <div class="cube1">
@@ -37,21 +37,18 @@
                 </div>
                 <span class="clearfix"></span>
             </div>
-             <div class="block">
+            <div class="block">
                 <div class="cube1">
                     <p>1</p>
                 </div>
-                <div class="cube100">
-                    <p>5</p>
-                </div>
-                <div class="cube100">
+                <div class="cube2">
                     <p>4</p>
                 </div>
-                <div class="cube100">
-                    <p>3</p>
-                </div>
-                <div class="cube100">
+                <div class="cube1">
                     <p>2</p>
+                </div>
+                <div class="cube2">
+                    <p>3</p>
                 </div>
                 <span class="clearfix"></span>
             </div>
