--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <div class="cube1">
                     <p>1</p>
                 </div>
-                <div class="cube100">
+                <div class="cubeOne">
                     <p>5</p>
                 </div>
-                <div class="cube100">
+                <div class="cubeOne">
                     <p>4</p>
                 </div>
-                <div class="cube100">
+                <div class="cubeOne">
                     <p>3</p>
                 </div>
-                <div class="cube100">
+                <div class="cubeOne">
                     <p>2</p>
                 </div>
                 <span class="clearfix"></span>
