--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 9</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./converted-fonts/">
 </head>
 <body>
     <main>
