add some text and style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons</title>
+    <title>Lesson 10. Menu</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <header>
-
+      <nav>
+        <ul id="menu">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Articles</a>
+                            <ul>
+                                 <li><a href="#">HTML</a></li>
+                                 <li><a href="#">CSS</a></li>
+                                    <li><a href="#">Java Script</a>
+                                        <ul>
+                                            <li><a href="#">Introduction</a></li>
+                                            <li><a href="#">Elementary</a></li>
+                                            <li><a href="#">Advanced</a></li>
+                                        </ul>
+                                    </li>
+                            </ul>
+                    </li>
+                    <li><a href="#">Video</a></li>
+                    <li><a href="#">Files</a></li>
+                    <li><a href="#">FAQ</a></li>
+            </ul>
+      </nav>
     </header>
 
     <main>
