add some text and style

--- a/index.html
+++ b/index.html
@@ -9,11 +9,26 @@
 </head>
 <body>
     <header>
-
+        <div class="logo">
+            <img src="/images/Skinn®.svg" alt="skinn">
+        </div>
+        <div class="menu-items">
+            <div class="menu-item">Shop All</div>
+            <div class="menu-item">Our Story</div>
+            <div class="menu-item">Blog</div>
+            <div class="menu-item">Pages</div>
+        </div>
+        <div class="cart">Cart</div>
     </header>
 
     <main>
-
+        <div class="discover">
+            <div class="discover-text"></div>
+            <div class="discover-img">
+                <img src="./images/IMAGE.jpg" alt="face">
+            </div>
+            <div class="discover-button"></div>
+        </div>
     </main>
 
     <footer>
