--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lessons</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="/images/Skinn®.svg" alt="skinn">
+            <img src="./images/Skinn®.svg" alt="skinn">
         </div>
         <div class="menu-items">
             <div class="menu-item">Shop All</div>
@@ -18,17 +20,112 @@
             <div class="menu-item">Blog</div>
             <div class="menu-item">Pages</div>
         </div>
-        <div class="cart">Cart</div>
+        <div class="cart">
+            <div class="cart-text">Cart</div>
+            <div class="cart-cube">0</div>
+        </div>
     </header>
-
     <main>
         <div class="discover">
-            <div class="discover-text"></div>
+            <div class="discover-text">Discover The Beauty Within</div>
+            <button class="discover-button">View collection</button>
+            <div class="discover-you">You</div>
             <div class="discover-img">
-                <img src="./images/IMAGE.jpg" alt="face">
+                <img src="./images/face1.jpg" alt="face">
             </div>
-            <div class="discover-button"></div>
         </div>
+        <div class="shop">
+            <div class="shop-pictures1">
+                <img class="hands-img" src="./images/hands.jpg" alt="hands">
+                <img class="bottle-img" src="./images/bottle.jpg" alt="bottle">
+            </div>
+            <div class="shop-text">
+                <p class="main-text">Natural and certified organic</p>
+                <p class="sub-text">Skincare</p>
+                <p class="description-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                     praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi.</p>
+                <button class="shop-all-button">Shop all</button>
+            </div>
+            <div class="shop-pictures2">
+                <img class="faces-img" src="./images/faces2.jpg" alt="faces">
+                <img class="massager-img" src="./images/massager.jpg" alt="massager">
+                <img class="man-img" src="./images/manFace.jpg" alt="man-face">
+            </div>
+        </div>
+        <div class="image-woman">
+            <img src="./images/girl-with-cream.jpg" alt="girl-with-cream">
+        </div>
+        <div class="products">
+            <div class="products-text1">Products</div>
+            <div class="products-text2">Healthy skin, wildly you</div>
+            <div class="card-column">
+                <div class="card">
+                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <div class="card-body">
+                      <div class="name-price">
+                        <p class="card-name">CLEANCER</p>
+                        <p class="card-price">$ 56.00 USD</p>
+                      </div>
+                      <p class="card-description">Anti Acne Face Wash</p>
+                    </div> 
+                    <button class="card-button">Shop now</button>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <div class="card-body">
+                      <div class="name-price">
+                        <p class="card-name">CLEANCER</p>
+                        <p class="card-price">$ 56.00 USD</p>
+                      </div>
+                      <p class="card-description">Anti Acne Face Wash</p>
+                    </div> 
+                    <button class="card-button">Shop now</button>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <div class="card-body">
+                      <div class="name-price">
+                        <p class="card-name">CLEANCER</p>
+                        <p class="card-price">$ 56.00 USD</p>
+                      </div>
+                      <p class="card-description">Anti Acne Face Wash</p>
+                    </div> 
+                    <button class="card-button">Shop now</button>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <div class="card-body">
+                      <div class="name-price">
+                        <p class="card-name">CLEANCER</p>
+                        <p class="card-price">$ 56.00 USD</p>
+                      </div>
+                      <p class="card-description">Anti Acne Face Wash</p>
+                    </div> 
+                    <button class="card-button">Shop now</button>
+                </div>
+
+            </div>
+
+            <div class="innovation">
+                <div>
+                    <img class="innovation-img" src="./images/bottle-hand.png" alt="bottle-hand_pic">
+                </div>
+                <div class="innovation-div">
+                    <p class="innovation-feature">Feature</p>
+                    <p class="innovation-inn">Innovation-led Products</p>
+                    <p class="innovation-temp">Temporibus autem quibusdam et aut officiis debitis
+                         aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint.</p>
+                   <div class="innovation-center-button">
+                        <button class="innovation-button">Read more</button>
+                   </div>
+                </div>
+            </div>
+
+            <div class="wash">
+                <p>privet</p>
+            </div>
+        </div>
+        
     </main>
 
     <footer>
