--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons</title>
+    <title>Skinn</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -71,68 +72,180 @@
                     <button class="card-button">Shop now</button>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <img class="card-img-top" src="./images/img-for-2-card.jpg" alt="Card-img-2">
                     <div class="card-body">
                       <div class="name-price">
-                        <p class="card-name">CLEANCER</p>
-                        <p class="card-price">$ 56.00 USD</p>
+                        <p class="card-name">SERUMS</p>
+                        <p class="card-price">$ 34.00 USD</p>
                       </div>
-                      <p class="card-description">Anti Acne Face Wash</p>
+                      <p class="card-description">Vitamin C Hand & Nail Cream</p>
                     </div> 
                     <button class="card-button">Shop now</button>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <img class="card-img-top" src="./images/img-for-3-card.jpg" alt="Card-img-3">
                     <div class="card-body">
                       <div class="name-price">
-                        <p class="card-name">CLEANCER</p>
-                        <p class="card-price">$ 56.00 USD</p>
+                        <p class="card-name">BODY WASH</p>
+                        <p class="card-price">$ 67.00 USD</p>
                       </div>
-                      <p class="card-description">Anti Acne Face Wash</p>
+                      <p class="card-description">Vitamin C Clay Face Mask</p>
                     </div> 
                     <button class="card-button">Shop now</button>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="./images/img-for-1-card.jpg" alt="Card-img-1">
+                    <img class="card-img-top" src="./images/img-for-4-card.jpg" alt="Card-img-4">
                     <div class="card-body">
                       <div class="name-price">
-                        <p class="card-name">CLEANCER</p>
-                        <p class="card-price">$ 56.00 USD</p>
+                        <p class="card-name">NIGHT CREAM</p>
+                        <p class="card-price">$ 89.00 USD</p>
                       </div>
-                      <p class="card-description">Anti Acne Face Wash</p>
+                      <p class="card-description">10 In 1 Active Miracle</p>
                     </div> 
                     <button class="card-button">Shop now</button>
                 </div>
-
             </div>
-
-            <div class="innovation">
-                <div>
-                    <img class="innovation-img" src="./images/bottle-hand.png" alt="bottle-hand_pic">
-                </div>
-                <div class="innovation-div">
-                    <p class="innovation-feature">Feature</p>
-                    <p class="innovation-inn">Innovation-led Products</p>
-                    <p class="innovation-temp">Temporibus autem quibusdam et aut officiis debitis
-                         aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint.</p>
-                   <div class="innovation-center-button">
+               <div class="innovation">
+                <div class="innovation-content">
+                    <img  class="innovation-img" src="./images/bottle-hand.png" alt="bottle-hand">
+                    <div>
+                        <p class="feature-text">Feature</p>
+                        <p class="innovation-text">Innovation-led Products</p>
+                        <p class="tempo-text">
+                            Temporibus autem quibusdam et aut officiis debitis aut <br>
+                            rerum necessitatibus saepe eveniet ut et voluptates <br>
+                            repudiandae sint.
+                        </p>
                         <button class="innovation-button">Read more</button>
-                   </div>
+                    </div>
                 </div>
             </div>
-
+            <div class="generate">
+                <div class="generate-p">
+                    <p>
+                        "Generate Lorem Ipsum which looks reasonable. The generated
+                        Lorem Ipsum is therefore always free from repetition,
+                        injected humour, or non-characteristic"
+                    </p>
+                </div>
+                    <div class="logo-group">
+                        <img class="veririo-img" src="./images/veririo.jpg" alt="1logo">
+                        <img class="veririo-img" src="./images/happenz.jpeg" alt="2logo">
+                        <img class="veririo-img"  src="./images/katerio.jpg" alt="3logo">
+                        <img class="veririo-img"  src="./images/oygey.jpg" alt="4logo">
+                    </div>
+                </div>
+        </div>
             <div class="wash">
-                <p>privet</p>
+                <div class="wash-content">
+                    <a href="./index.html"><img src="./images/neck.png" alt="BODY-WASH_link"></a>
+                    <a href="./index.html"><img src="./images/face-hands-towel.png" alt="FACE-WASH_link"></a>
+                    <a href="./index.html"><img src="./images/girl-hand.png" alt="CLEANCER_link"></a>
+                </div>
+                <div>
+                    <a class="link-group first-link" href="./index.html">BODY WASH</a>
+                    <a class="link-group second-link" href="./index.html">FACE WASH</a>
+                    <a class="link-group third-link" href="./index.html">CLEANCER</a>
+                </div>
+            </div>
+        <div class="skinn-blog">
+            <p class="skinn-paragraph">Skinn blog</p>
+                <div class="card-blog">
+                    <div class="description">
+                        <img src="./images/sink-and-bottles.png" alt="sink-and-bottles">
+                        <div>
+                            <p class="skinn-text1">
+                            Which skinceuticals vitamin
+                            c serum is right for you
+                            </p>
+                            <button class="skinn-button1">Read more</button>
+                        </div>
+                    </div>
+                    <div class="description">
+                        <img src="./images/cucumber-eyes.png" alt="cucumber-eyes">
+                        <div>
+                            <p class="skinn-text2">
+                                Everything you need to know about your skin
+                            </p>
+                            <button class="skinn-button2">Read more</button>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer-skinn">
+            <div class="navigation1">
+                <img class="logo" src="./images/Skinn®.svg" alt="logo">
+                <p class="skin-text">
+                    The wise man therefore always holds in these
+                    matters to this principle
+                </p>
+                <div class="nav-links">
+                    <span>Designed by</span>
+                    <a class="link" href="./index.html"> Webestica</a>
+                </div>
+                <div class="nav-links">
+                    <span>Powered by</span>
+                    <a class="link" href="./index.html"> Webflow</a>
+                </div>
             </div>
         </div>
-        
-    </main>
-
-    <footer>
-        
+        <div class="footer-pages">
+            <div class="navigation2">
+                            <p class="navigation-tile">Pages</p>
+                            <div class="pages">
+                            <div class="pages-list">
+                                    <ul>
+                                        <li>Home</li>
+                                        <li>Home 2</li>
+                                        <li>Shop All</li>
+                                        <li>Our Story</li>
+                                        <li>Blog</li>
+                                        <li>FAQs</li>
+                                    </ul>
+                                </div>
+                                <div class="pages-list">
+                                    <ul>
+                                        <li>Contact Us</li>
+                                        <li>Instructions</li>
+                                        <li>Style Guide</li>
+                                        <li>Licenses</li>
+                                        <li>Changelog</li>
+                                    </ul>
+                                </div> 
+                            </div>
+                        </div>
+        </div>
+            <div class="footer-contacts">
+                <div class="navigation3">
+                    <p class="contacts-title">Contact us</p>
+                    <div class="contacts-pages">
+                        <p>Have questions or suggestions?</p>
+                        <a class="link" href="mailto:hello@webestica.com">hello@webestica.com</a>
+                    </div>
+                    <div class="contacts-pages">
+                        <p>Need assistance? Give us a call.</p>
+                        <a class="link" href="tel:+01-598-269-4756">+01 598 269 4756</a>
+                    </div>
+                </div>
+            </div>
+           <div class="footer-we-here">
+                <div class="navigation4">
+                    <p class="we-here-title">We’re here for you</p>
+                    <div class="we-here-text">
+                        <p>Monday - Thursday: 9:30 - 18:00</p>
+                        <p>Friday: 9:30 - 15:00</p>
+                    </div>
+                    <div class="we-here-img">
+                        <img src="./images/facebook.png" alt="facebook">
+                        <img src="./images/instagram.png" alt="instagram">
+                        <img src="./images/pinterest.png" alt="pinterest">
+                        <img src="./images/twitter.png" alt="twitter">
+                    </div>
+                </div>
+           </div>
     </footer>
-
-
     <script src="./js/script.js"></script>
 </body>
 </html>
